[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/subweapon_xandria_icons.png" type="Texture" id=1]
[ext_resource path="res://objects/SubweaponChanger.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.38886, 10 )

[sub_resource type="CircleShape2D" id=2]
radius = 13.9696

[node name="SubweaponChanger" type="RigidBody2D"]
collision_layer = 0
collision_mask = 8
mode = 2
gravity_scale = 5.0
contact_monitor = true
script = ExtResource( 2 )

[node name="subweapons_xandria" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.513865, -10 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.701151, -10.5318 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.441942, -9.01561 )
scale = Vector2( 3.37765, 2.52028 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
